Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-4181

[Python] TestConvertStructTypes.test_from_numpy_large failing

    XMLWordPrintableJSON

Details

    Description

      This is half of ARROW-4179 (this test should not be running in Travis CI at all). This failure appears to be a regression, and was not caught because we do not regularly run the large_memory tests

      kszucs now that we have these large memory DGX machines we should run the large_memory unit tests at least once a day

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              wesm Wes McKinney
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 20m
                  1h 20m