ARROW-4181: [Python] Fixes for Numpy struct array conversion

This fixes two issues:
- object fields inside numpy structs should be allowed
- buggy ndarray indexing if stride % itemsize != 0

Author: Antoine Pitrou <antoine@python.org>

Closes #3614 from pitrou/ARROW-4181-py-struct-conversion-fixes and squashes the following commits:

9886e29e <Antoine Pitrou> ARROW-4181:  Fixes for Numpy struct array conversion